--- a/css/component_user_progress.css
+++ b/css/component_user_progress.css
@@ -8,8 +8,6 @@
     transition: height var(--t_fast_transition), padding var(--t_fast_transition);   
 }
 
-/* transition: flex-basis var(--t_fast_transition), padding var(--t_fast_transition), opacity var(--t_fast_transition); */
-
 #progress_container{
     display: flex;
     width: 100%;
@@ -22,7 +20,6 @@
 
 #progress_rank{
     width: 50%;
-    background-color: antiquewhite;
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -35,7 +32,6 @@
     background-color: rgb(215, 248, 250);
 }
 
-
 #progress_rank_img{
     height: 25%;
     width: 25%;
@@ -43,6 +39,7 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    margin: 10px;
 }
 
 #progress_rank_progressbar{
@@ -69,4 +66,17 @@
     left: 0;
     right: 0;
     margin: 0 auto;
+}
+
+#progress_stats{
+    height: 20%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+
+#progress_stats div{
+    text-align: center;
+    padding: 10px 15px;
+    width: 50%;
 }
