--- a/css/component_user_progress.css
+++ b/css/component_user_progress.css
@@ -27,9 +27,8 @@
     align-items: center;
 }
 
-#progress_badges{
-    width: 50%;
-    background-color: rgb(215, 248, 250);
+#progress_rank_current{
+    font-size: 1.2rem;
 }
 
 #progress_rank_img{
@@ -79,4 +78,41 @@
     text-align: center;
     padding: 10px 15px;
     width: 50%;
+}
+
+
+#progress_badges_container{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+#progress_badges_container > div:first-child{
+    width: 100%;
+    height: 20%; 
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+#progress_badges{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: top;
+}
+
+#progress_badges div{
+    margin: 10px;
+    width: 10%;
+    height: 30%;
+    background-image: url(https://cdn-icons-png.flaticon.com/512/3135/3135783.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
