Added temporary ranks and other thingsss

--- a/css/component_user_progress.css
+++ b/css/component_user_progress.css
@@ -40,7 +40,7 @@
 #progress_rank_img{
     height: 25%;
     width: 25%;
-    background-image: url(https://cdn-icons-png.flaticon.com/512/3135/3135783.png);
+    background-image: url(../media/rank5.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
