--- a/css/component_user_progress_header.css
+++ b/css/component_user_progress_header.css
@@ -6,7 +6,7 @@
 
 #progress_header_rank_img{
     width: 25%;
-    background-image: url(https://cdn-icons-png.flaticon.com/512/3135/3135783.png);
+    background-image: url(../media/rank5.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
