--- a/css/component_user_progress.css
+++ b/css/component_user_progress.css
@@ -106,6 +106,7 @@
 }
 
 #progress_badges{
+
     width: 100%;
     height: 100%;
     display: flex;
@@ -123,6 +124,7 @@
     /* mask-image: linear-gradient(to bottom, black calc(100% - 50px), transparent 100%); */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    align-content: center;
 }
 
 .progress_badge{
