--- a/css/component_user_progress.css
+++ b/css/component_user_progress.css
@@ -169,7 +169,13 @@ justify-content: center;
     width: 80%;
     height: 100%;
     overflow-y: scroll;
-    border-radius: 0px 0px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+
+#rankings_wrapper::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 
 #rankings_top{
@@ -182,15 +188,16 @@ justify-content: center;
     color: white;
     text-align: center;
     font-weight: bold;
-    border-radius: 10px 10px 0px 0px;
     z-index: 10;
+    border-radius: 10px 10px 0px 0px;
 }
 
 #rankings_content{
+    overflow-y: scroll;
     border-radius: 0px 0px 10px 10px;
 }
 
-.rankings_content_item{
+#rankings_content > div{
     padding: 2vh;
     position: sticky;
     top: 0;
